--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="" alt="">
+      <img src="game-logo.png" alt="Tic-Tac-Toe">
       <h1>React Tic-Tac-Toe</h1>
     </header>
     <div id="root"></div>
